fix dibagian tanggal finish deposit serta refactor yang lainnya,bug dibagian filter dari history deposit didalam detailShop, masih bug dibagian totalsoldout product

--- a/app/src/main/res/layout/fragment_detail_deposit.xml
+++ b/app/src/main/res/layout/fragment_detail_deposit.xml
@@ -11,111 +11,117 @@
 
     </data>
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/_10sdp"
-        app:cardBackgroundColor="#344955"
-        app:cardCornerRadius="@dimen/_10sdp"
-        app:cardElevation="@dimen/_8sdp">
+    <ScrollView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content">
 
-        <RelativeLayout
+        <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/_16sdp">
+            android:layout_margin="@dimen/_10sdp"
+            app:cardBackgroundColor="#344955"
+            app:cardCornerRadius="@dimen/_10sdp"
+            app:cardElevation="@dimen/_8sdp">
 
-            <TextView
-                android:id="@+id/tv_informasi_detail_deposit"
-                style="@style/text2_deposit"
-                android:text="@{args.currentItem.shopData.ownerName}"
-                android:textSize="@dimen/_16ssp" />
-
-            <TextView
-                android:id="@+id/tv_nama_toko_label"
-                style="@style/detail_deposit"
-                android:layout_below="@id/tv_informasi_detail_deposit"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:text="@string/nama_toko_deposit_detail" />
-
-            <TextView
-                android:id="@+id/tv_nama_toko_deposit_detail"
-                style="@style/detail_deposit"
-                android:layout_below="@id/tv_informasi_detail_deposit"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_toEndOf="@id/tv_nama_toko_label"
-                android:text="@{args.currentItem.shopData.name}" />
-
-            <TextView
-                android:id="@+id/tv_tanggal_deposit_label"
-                style="@style/text1_deposit"
-                android:layout_below="@id/tv_nama_toko_label"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:text="@string/tanggal_deposit_detail_deposit" />
-
-            <TextView
-                android:id="@+id/tv_tanggal_deposit_deposit_detail"
-                style="@style/text1_deposit"
-                android:layout_below="@id/tv_nama_toko_label"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:layout_toEndOf="@id/tv_tanggal_deposit_label"
-                android:text="@{args.currentItem.depositData.depositDate}" />
-
-            <TextView
-                android:id="@+id/tv_tanggal_selesai_label"
-                style="@style/text_detail"
-                android:layout_below="@id/tv_tanggal_deposit_label"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="@dimen/_6sdp"
-                android:text="@string/tanggal_selesai_deposit_detail_deposit" />
-
-            <TextView
-                android:id="@+id/tv_finish_deposit_detail"
-                style="@style/text_detail"
-                android:layout_below="@id/tv_tanggal_deposit_label"
-                android:layout_marginTop="@dimen/_7sdp"
-                android:layout_marginEnd="@dimen/_2sdp"
-                android:layout_toEndOf="@id/tv_tanggal_selesai_label"
-                android:text="@{args.currentItem.depositData.depositFinish.isEmpty() ? `Proses` : args.currentItem.depositData.depositFinish}" />
-
-            <TextView
-                android:id="@+id/tv_detail_produk_in_detail_deposit"
-                style="@style/text2_deposit"
-                android:layout_below="@id/tv_finish_deposit_detail"
-                android:layout_marginTop="@dimen/_30sdp"
-                android:text="@string/list_produk" />
-
-            <View
-                android:id="@+id/view_in_deposit_detail"
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/_1sdp"
-                android:layout_below="@id/tv_detail_produk_in_detail_deposit"
-                android:background="@color/white" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvProductInDepositDetail"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/view_in_deposit_detail"
-                app:layoutManager="LinearLayoutManager"
-                tools:listitem="@layout/item_product_in_deposit_detail" />
+                android:padding="@dimen/_16sdp">
 
-            <Button
-                android:id="@+id/btn_detail_deposit_produk"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/rvProductInDepositDetail"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="@dimen/_10sdp"
-                android:backgroundTint="@color/button"
-                android:fontFamily="@font/lato_black"
-                android:text="@string/lanjut"
-                android:textColor="@color/white" />
+                <TextView
+                    android:id="@+id/tv_informasi_detail_deposit"
+                    style="@style/text2_deposit"
+                    android:text="@{args.currentItem.shopData.ownerName}"
+                    android:textSize="@dimen/_16ssp" />
 
-        </RelativeLayout>
+                <TextView
+                    android:id="@+id/tv_nama_toko_label"
+                    style="@style/detail_deposit"
+                    android:layout_below="@id/tv_informasi_detail_deposit"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:text="@string/nama_toko_deposit_detail" />
 
-    </androidx.cardview.widget.CardView>
+                <TextView
+                    android:id="@+id/tv_nama_toko_deposit_detail"
+                    style="@style/detail_deposit"
+                    android:layout_below="@id/tv_informasi_detail_deposit"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_toEndOf="@id/tv_nama_toko_label"
+                    android:text="@{args.currentItem.shopData.name}" />
+
+                <TextView
+                    android:id="@+id/tv_tanggal_deposit_label"
+                    style="@style/text1_deposit"
+                    android:layout_below="@id/tv_nama_toko_label"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:text="@string/tanggal_deposit_detail_deposit" />
+
+                <TextView
+                    android:id="@+id/tv_tanggal_deposit_deposit_detail"
+                    style="@style/text1_deposit"
+                    android:layout_below="@id/tv_nama_toko_label"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_marginEnd="@dimen/_2sdp"
+                    android:layout_toEndOf="@id/tv_tanggal_deposit_label"
+                    android:text="@{args.currentItem.depositData.depositDate}" />
+
+                <TextView
+                    android:id="@+id/tv_tanggal_selesai_label"
+                    style="@style/text_detail"
+                    android:layout_below="@id/tv_tanggal_deposit_label"
+                    android:layout_alignParentStart="true"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:text="@string/tanggal_selesai_deposit_detail_deposit" />
+
+                <TextView
+                    android:id="@+id/tv_finish_deposit_detail"
+                    style="@style/text_detail"
+                    android:layout_below="@id/tv_tanggal_deposit_label"
+                    android:layout_marginTop="@dimen/_6sdp"
+                    android:layout_marginEnd="@dimen/_2sdp"
+                    android:layout_toEndOf="@id/tv_tanggal_selesai_label"
+                    android:layout_marginStart="@dimen/_1sdp"
+                    android:text="@{args.currentItem.depositData.depositFinish.isEmpty() ? `Proses` : args.currentItem.depositData.depositFinish}" />
+
+                <TextView
+                    android:id="@+id/tv_detail_produk_in_detail_deposit"
+                    style="@style/text2_deposit"
+                    android:layout_below="@id/tv_finish_deposit_detail"
+                    android:layout_marginTop="@dimen/_25sdp"
+                    android:text="@string/list_produk" />
+
+                <View
+                    android:id="@+id/view_in_deposit_detail"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/_1sdp"
+                    android:layout_below="@id/tv_detail_produk_in_detail_deposit"
+                    android:background="@color/white" />
+
+                <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/rvProductInDepositDetail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/view_in_deposit_detail"
+                    app:layoutManager="LinearLayoutManager"
+                    tools:listitem="@layout/item_product_in_deposit_detail" />
+
+                <Button
+                    android:id="@+id/btn_detail_deposit_produk"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/rvProductInDepositDetail"
+                    android:layout_alignParentEnd="true"
+                    android:backgroundTint="@color/button"
+                    android:fontFamily="@font/lato_black"
+                    android:text="@string/lanjut"
+                    android:textColor="@color/white" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
+    </ScrollView>
 
 </layout>
