--- a/app/src/main/res/layout/fragment_detail_shop.xml
+++ b/app/src/main/res/layout/fragment_detail_shop.xml
@@ -1,12 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
         <variable
             name="args"
             type="com.example.konsinyasiapp.ui.shop.DetailShopFragmentArgs" />
+
+        <variable
+            name="depositdata"
+            type="com.example.konsinyasiapp.entities.DepositWithShop" />
     </data>
 
     <androidx.cardview.widget.CardView
@@ -18,7 +23,7 @@
         app:cardElevation="@dimen/_8sdp"
         app:cardMaxElevation="@dimen/_5sdp">
 
-        <LinearLayout
+        <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -31,13 +36,17 @@
                 android:fontFamily="@font/lato_black"
                 android:text="@{args.currentItem.name}"
                 android:textColor="@color/white"
-                android:textSize="@dimen/_18ssp" />
+                android:textSize="@dimen/_18ssp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <View
+                android:id="@+id/view_shop"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/_2sdp"
                 android:layout_marginTop="@dimen/_3sdp"
-                android:background="@color/white" />
+                android:background="@color/white"
+                app:layout_constraintTop_toBottomOf="@id/tv_shop_name_detail" />
 
             <LinearLayout
                 android:id="@+id/alamat_shop_detail"
@@ -45,7 +54,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingTop="@dimen/_16sdp"
-                android:paddingBottom="@dimen/_8sdp">
+                android:paddingBottom="@dimen/_8sdp"
+                app:layout_constraintTop_toBottomOf="@id/view_shop">
 
                 <ImageView
                     android:layout_width="@dimen/_24sdp"
@@ -72,7 +82,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingTop="@dimen/_8sdp"
-                android:paddingBottom="@dimen/_8sdp">
+                android:paddingBottom="@dimen/_8sdp"
+                app:layout_constraintTop_toBottomOf="@id/alamat_shop_detail">
 
                 <ImageView
                     android:layout_width="@dimen/_24sdp"
@@ -99,7 +110,8 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:paddingTop="@dimen/_8sdp"
-                android:paddingBottom="@dimen/_16sdp">
+                android:paddingBottom="@dimen/_16sdp"
+                app:layout_constraintTop_toBottomOf="@id/nama_pemilik_shop_detail">
 
                 <ImageView
                     android:layout_width="@dimen/_24sdp"
@@ -120,7 +132,50 @@
 
             </LinearLayout>
 
-        </LinearLayout>
+            <TextView
+                android:id="@+id/tv_riwayat_deposit_shop"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_8sdp"
+                android:fontFamily="@font/lato_black"
+                android:text="Riwayat Deposit :"
+                android:textColor="@color/white"
+                android:textSize="@dimen/_18ssp"
+                app:layout_constraintStart_toStartOf="@id/rv_item_deposit_date"
+                app:layout_constraintTop_toBottomOf="@id/nomor_telepon_shop_detail" />
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/rv_item_deposit_date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintTop_toBottomOf="@id/tv_riwayat_deposit_shop"
+                tools:listitem="@layout/item_deposit_date" />
+
+            <androidx.appcompat.widget.AppCompatImageView
+                android:id="@+id/no_data_imageView"
+                android:layout_width="@dimen/_140sdp"
+                android:layout_height="@dimen/_140sdp"
+                android:src="@drawable/ic_no_data"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@id/rv_item_deposit_date"
+                tools:visibility="invisible" />
+
+            <TextView
+                android:id="@+id/no_data_textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_9sdp"
+                android:text="Tidak Ada Riwayat Deposit"
+                android:textSize="@dimen/_16ssp"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/no_data_imageView" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.cardview.widget.CardView>
 
